--- a/mobike/static/css/styles.css
+++ b/mobike/static/css/styles.css
@@ -303,7 +303,7 @@ select {
 	-ms-appearance: none;
     -o-appearance: none;
     appearance: none;
-    background-image: url('../images/down-arrow.png');
+    background-image: url('../img/one-page/down-arrow.png');
     background-position: 96% 50%;
     background-repeat: no-repeat;
     outline: none;
@@ -696,7 +696,7 @@ input[type='checkbox'] {
 .header {
 	padding-top: 8rem;
 	padding-bottom: 7.75rem;
-	background: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url('../images/header-background.jpg') center center no-repeat;
+	background: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url('../img/one-page/header-background.jpg') center center no-repeat;
 	background-size: cover;
 	text-align: center;
 }
@@ -750,13 +750,13 @@ input[type='checkbox'] {
 
 .slider-1 .swiper-button-prev {
 	left: -0.875rem;
-	background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2028%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%23ffffff'%2F%3E%3C%2Fsvg%3E");
+	background-image: url("data:img/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2028%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%23ffffff'%2F%3E%3C%2Fsvg%3E");
 	background-size: 1.125rem 1.75rem;
 }
 
 .slider-1 .swiper-button-next {
 	right: -0.875rem;
-	background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2028%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23ffffff'%2F%3E%3C%2Fsvg%3E");
+	background-image: url("data:img/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2028%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23ffffff'%2F%3E%3C%2Fsvg%3E");
 	background-size: 1.125rem 1.75rem;
 }
 
@@ -911,7 +911,7 @@ input[type='checkbox'] {
 .basic-1 {
 	padding-top: 7.5rem;
 	padding-bottom: 8rem;
-	background: url('../images/video-background.jpg') center center no-repeat;
+	background: url('../img/one-page/video-background.jpg') center center no-repeat;
 	background-size: cover; 
 }
 
@@ -1257,7 +1257,7 @@ input[type='checkbox'] {
 .basic-4 {
 	padding-top: 7.75rem;
 	padding-bottom: 8.125rem;
-	background: url('../images/download-background.jpg') center center no-repeat;
+	background: url('../img/one-page/download-background.jpg') center center no-repeat;
 	background-size: cover; 
 }
 
@@ -1361,7 +1361,7 @@ a.back-to-top {
 	width: 2.625rem;
 	height: 2.625rem;
 	border-radius: 1.875rem;
-	background: #5557da url("../images/up-arrow.png") no-repeat center 47%;
+	background: #5557da url("../img/one-page/up-arrow.png") no-repeat center 47%;
 	background-size: 1.125rem 1.125rem;
 	text-indent: -9999px;
 }
