Modificacion templates base, agregar, editar y listar bicicleta

--- a/mobike/templates/Bicicleta/listar_bicicletas.html
+++ b/mobike/templates/Bicicleta/listar_bicicletas.html
@@ -2,11 +2,11 @@
 
 {% block content %}
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-12">
     <div class="card">
       <div class="card-header card-header-primary">
         <h4 class="card-title ">Listado de bicicletas</h4>
-        <p class="card-category">bicicletas registradas en el sistema</p>
+        <p class="card-category">Bicicletas registradas en el sistema</p>
       </div>
       <div class="card-body">
         <div class="table-responsive">
@@ -24,9 +24,9 @@
                  <td>{{ b.marca }}</td>
                  <td>{{ b.modelo }}</td>
                  <td>{{ b.mantencion }}</td>
-                 <td><a href="{% url 'editar_bicicleta' b.id %}">Editar</a></td>
-                 <td>
-                   <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal{{b.id}}">
+                 <td class="text-center"><a class="btn btn-primary" href="{% url 'editar_bicicleta' b.id %}">Editar</a></td>
+                 <td class="text-center">
+                   <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal{{b.id}}">
                      Eliminar
                     </button>
                   </td>
@@ -58,6 +58,12 @@
       </div>
     </div>
   </div>
+  <div class="col-12">
+    <ul class="nav justify-content-end">
+      <li><a class="btn btn-primary" href="{% url 'agregar_bicicleta' %}">Agregar nueva bicicleta</a></li>
+    </ul>
+  </div>
+</div>
 {% endblock %}
 
 
