--- a/mobike/templates/Bicicleta/editar_bicicleta.html
+++ b/mobike/templates/Bicicleta/editar_bicicleta.html
@@ -2,14 +2,28 @@
 
 {% block content %}
 <div class="row">
-  <div class="col-md-12">
-    <h1>Agregar Carrera</h1>
-    <form method="POST">
-        {% csrf_token %} 
-        {{ form.as_table }}
-        <button type="submit">GRABAR</button>
-    </form>
+  <div class="col-12">
+      <div class="card">
+          <div class="card-header card-header-primary">
+              <h4 class="card-title">Editar Bicicleta</h4>
+              <p class="card-category">Complete los siguientes campos</p>
+          </div>
+          <div class="card-body">
+              <form method="POST">
+                  {% csrf_token %}
+                  {{ form.as_table }}
+                  <button type="submit" class="btn btn-primary pull-right">GUARDAR</button>
+                  <div class="clearfix"></div>
+              </form>
+          </div>
+      </div>
   </div>
+  <div class="col-12">
+    <ul class="nav justify-content-end">
+        <li><a class="btn btn-primary" href="{% url 'listar_bicicletas' %}">Listar todas las bicicletas</a></li>
+        <li><a class="btn btn-primary" href="javascript:history.go(-1)">Volver</a></li>
+    </ul>
+</div>
 </div>
 {% endblock %}
 
