--- a/mobike/templates/Bicicleta/listar_bicicletas.html
+++ b/mobike/templates/Bicicleta/listar_bicicletas.html
@@ -1,70 +1,55 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="row">
-  <div class="col-12">
-    <div class="card">
-      <div class="card-header card-header-primary">
-        <h4 class="card-title ">Listado de bicicletas</h4>
-        <p class="card-category">Bicicletas registradas en el sistema</p>
-      </div>
-      <div class="card-body">
-        <div class="table-responsive">
-          <table class="table">
-            <thead class=" text-primary">
-              <th>ID</th>
-              <th>Marca</th>
-              <th>Modelo</th>
-              <th>Mantención</th>
-            </thead>
-            <tbody>
-               {% for b in bicicletas %}
-               <tr>
-                 <td>{{ b.id }}</td>
-                 <td>{{ b.marca }}</td>
-                 <td>{{ b.modelo }}</td>
-                 <td>{{ b.mantencion }}</td>
-                 <td class="text-center"><a class="btn btn-primary" href="{% url 'editar_bicicleta' b.id %}">Editar</a></td>
-                 <td class="text-center">
-                   <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal{{b.id}}">
-                     Eliminar
-                    </button>
-                  </td>
-                </tr>
-                <!-- Modal -->
-                <div class="modal fade" id="exampleModal{{b.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel{{b.id}}" aria-hidden="true">
-                  <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                         <h5 class="modal-title" id="exampleModalLabel{{b.id}}">Modal title</h5>
-                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                           <span aria-hidden="true">&times;</span>
-                          </button>
-                        </div>
-                        <div class="modal-body">
-                          Esta seguro que desea eliminar bicicleta {{b.id}}
-                        </div>
-                        <div class="modal-footer">
-                          <a href="{% url 'listar_bicicletas' %}">Cerrar</a> 
-                          <a href="{% url 'borrar_bicicleta' b.id %}">Eliminar</a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  {% endfor %}
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="col-12">
-    <ul class="nav justify-content-end">
-      <li><a class="btn btn-primary" href="{% url 'agregar_bicicleta' %}">Agregar nueva bicicleta</a></li>
-    </ul>
-  </div>
+<h4 class="card-title ">Listado de bicicletas</h4>
+<p class="card-category">Bicicletas registradas en el sistema</p>
+<table class="table">
+<thead class="text-primary">
+<th>ID</th>
+<th>Marca</th>
+<th>Modelo</th>
+<th>Mantención</th>
+</thead>
+<tbody>
+{% for b in bicicletas %}
+<tr>
+<td>{{ b.id }}</td>
+<td>{{ b.marca }}</td>
+<td>{{ b.modelo }}</td>
+<td>{{ b.mantencion }}</td>
+<td class="text-center"><a class="btn btn-primary" href="{% url 'editar_bicicleta' b.id %}">Editar</a></td>
+<td class="text-center">
+<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal{{b.id}}">Eliminar</button></td>
+</tr>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal{{b.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel{{b.id}}" aria-hidden="true">
+<div class="modal-dialog" role="document">
+<div class="modal-content">
+<div class="modal-header">
+<h5 class="modal-title" id="exampleModalLabel{{b.id}}">Modal title</h5>
+<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+<span aria-hidden="true">&times;</span>
+</button>
+</div>
+<div class="modal-body">Esta seguro que desea eliminar bicicleta {{b.id}}</div>
+<div class="modal-footer">
+<a href="{% url 'listar_bicicletas' %}">Cerrar</a> 
+<a href="{% url 'borrar_bicicleta' b.id %}">Eliminar</a>
+</div>
+</div>
+</div>
+</div>
+{% endfor %}
+</tbody>
+</table>
+</div>
+</div>
+</div>
+</div>
+<div class="col-12">
+<ul class="nav justify-content-end">
+<li><a class="btn btn-primary" href="{% url 'agregar_bicicleta' %}">Agregar nueva bicicleta</a></li>
+</ul>
+</div>
 </div>
 {% endblock %}
-
-
-   
