--- a/mobike/templates/Mobike/home.html
+++ b/mobike/templates/Mobike/home.html
@@ -18,6 +18,7 @@
     <link href="{% static 'css/fontawesome-all.css' %}" rel="stylesheet">
     <link href="{% static 'css/swiper.css' %}" rel="stylesheet">
 	<link href="{% static 'css/magnific-popup.css' %}" rel="stylesheet">
+    
 	<link href="{% static 'css/styles.css' %}" rel="stylesheet">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
@@ -865,20 +866,14 @@
     
     	
     <!-- Scripts -->
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <!-- jQuery for Bootstrap's JavaScript plugins -->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <!-- Bootstrap framework -->
-    <script src="{% static 'js/jquery.easing.min.js' %}"></script> 
-    <!-- jQuery Easing for smooth scrolling between anchors -->
-    <script src="{% static 'js/swiper.min.js' %}"></script>
-    <!-- Swiper for image and text sliders -->
+    
+    <script src="{% static 'js/bootstrap.min.js' %}"></script> <!-- Bootstrap framework -->
+    <script src="{% static 'js/jquery.easing.min.js' %}"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
     <script src="{% static 'js/jquery.magnific-popup.js' %}"></script> <!-- Magnific Popup for lightboxes -->
-    <script src="{% static 'js/morphext.min.js' %}"></script>
-    <!-- Morphtext rotating text in the header -->
-    <script src="{% static 'js/validator.min.js' %}"></script>
-    <!-- Validator.js - Bootstrap plugin that validates forms -->
-    <script src="{% static 'js/scripts.js' %}"></script>
-    <!-- Custom scripts -->
+    <script src="{% static 'js/jquery.min.js' %}"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
+    <script src="{% static 'js/morphext.min.js' %}"></script> <!-- Morphtext rotating text in the header -->
+    <script src="{% static 'js/scripts.js' %}"></script> <!-- Custom scripts -->
+    <script src="{% static 'js/swiper.min.js' %}"></script> <!-- Swiper for image and text sliders -->
+    <script src="{% static 'js/validator.min.js' %}"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
 </body>
 </html>
