--- a/mobike/templates/base.html
+++ b/mobike/templates/base.html
@@ -1,20 +1,49 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-  <meta charset="utf-8"/>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title> AdminMobike </title>
-  <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
-  
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title> AdminMobike </title>
+    <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/fontawesome-all.css' %}" rel="stylesheet">
+    <link href="{% static 'css/base.css' %}" rel="stylesheet">
+
 </head>
 
-<body class="">
-<div class="content">
-<div class="container-fluid">
-{% block content %} {% endblock %}
-</div>
-</div>
+<body>
+    {% include 'includes/header.html' %}
 
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-1">
+                <nav class="nav flex-column">
+                    <a class="nav-link" href="#">Inicio</a>
+                    <!--active-->
+                    <!-- <a class="nav-link" href="#">Usuarios</a>-->
+                    <a class="nav-link" href="#">Bicicletas</a>
+                    <!-- <a class="nav-link" href="#">Estacionamientos</a>
+                <a class="nav-link" href="#">Tarjetas</a> -->
+                    <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
+                </nav>
+            </div>
+            <div class="col-11">
+                <div class="container">
+                    {% block content %} {% endblock %}
+                </div>
+            </div>
+        </div>
+    </div>
+
+    
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <!-- jQuery for Bootstrap's JavaScript plugins -->
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <!-- Bootstrap framework -->
 </body>
+
 </html>
