--- a/mobike/templates/Bicicleta/editar_bicicleta.html
+++ b/mobike/templates/Bicicleta/editar_bicicleta.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row">
     <div class="col-12">
-        <div class="jumbotron jumbotron-fluid">
+        <div class="jumbotron jumbotron-fluid mt-4">
             <div class="container">
                 <h1 class="display-4">Editar Bicicleta</h1>
                 <p class="lead">Complete los siguientes campos</p>
