creacion de estacionamiento + modelo + vistas y templates /solo archivos, falta modificar)

--- a/mobike/templates/Bicicleta/agregar_bicicleta.html
+++ b/mobike/templates/Bicicleta/agregar_bicicleta.html
@@ -1,4 +1,9 @@
 {% extends 'base.html' %}
+{% block titulo_principal %}Agregar Bicicleta{% endblock %}
+
+{% block clase_principal %}
+<body class="estacionamientos">
+{% endblock %}
 
 {% block content %}
 <div class="row">
