--- a/mobike/templates/Estacionamiento/agregar_estacionamiento.html
+++ b/mobike/templates/Estacionamiento/agregar_estacionamiento.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block titulo_principal %}Editar Bicicleta{% endblock %}
+{% block titulo_principal %}Agregar Bicicleta{% endblock %}
 
 {% block clase_principal %}
 <body class="bicicletas">
@@ -10,7 +10,7 @@
     <div class="col-12">
         <div class="jumbotron jumbotron-fluid mt-4">
             <div class="container">
-                <h1 class="display-4">Editar Bicicleta</h1>
+                <h1 class="display-4">Agregar Bicicleta</h1>
                 <p class="lead">Complete los siguientes campos</p>
             </div>
         </div>
@@ -31,6 +31,8 @@
     </div>
 </div>
 {% endblock %}
+
+
 
 
    
