--- a/mobike/templates/Estacionamiento/listar_estacionamientos.html
+++ b/mobike/templates/Estacionamiento/listar_estacionamientos.html
@@ -2,7 +2,7 @@
 {% block titulo_principal %}Listar Bicicletas{% endblock %}
 
 {% block clase_principal %}
-<body class="bicicletas">
+<body class="estacionamientos">
 {% endblock %}
 
 {% block content %}
