--- a/mobike/static/css/base.css
+++ b/mobike/static/css/base.css
@@ -2,7 +2,11 @@
 
 .navbar.bg-dark { z-index: 1; }
 
+body.bicicletas .cont-nav nav a.active-biciletas { background-color: lightgray; color: black; }
+
 .cont-nav { width: 100%; height: calc(100vh - 56px); -webkit-box-shadow: 0px 6px 30px -15px black; box-shadow: 0px 6px 30px -15px black; background-color: #343a40; }
 .cont-nav nav a { color: white; }
 .cont-nav nav a:hover { background-color: lightgray; color: black; text-decoration: underline; }
 .cont-nav nav a.active { background-color: lightgray; color: black; }
+
+.cont-static { overflow: scroll; height: calc(100vh - 56px); }
