--- a/mobike/static/css/base.scss
+++ b/mobike/static/css/base.scss
@@ -7,6 +7,21 @@
     }
 }
 
+body {
+    &.bicicletas {
+        .cont-nav {
+            nav {
+                a {
+                    &.active-biciletas  {
+                        background-color: lightgray;
+                        color: black;
+                    }
+                }
+            }
+        }
+    }
+}
+
 .cont-nav {
     width: 100%;
     height: calc(100vh - 56px);
@@ -26,4 +41,9 @@
             }
         }
     }
+}
+
+.cont-static {
+    overflow: scroll;
+    height: calc(100vh - 56px);
 }
