--- a/mobike/templates/Estacionamiento/editar_estacionamiento.html
+++ b/mobike/templates/Estacionamiento/editar_estacionamiento.html
@@ -2,7 +2,7 @@
 {% block titulo_principal %}Editar Bicicleta{% endblock %}
 
 {% block clase_principal %}
-<body class="bicicletas">
+<body class="estacionamientos">
 {% endblock %}
 
 {% block content %}
