--- a/mobike/templates/base.html
+++ b/mobike/templates/base.html
@@ -29,7 +29,7 @@
                         <!--<a class="nav-link pl-5 active" href="#">Inicio</a>-->
                         <a class="nav-link pl-5 active-usuarios" href="#">Usuarios</a>
                         <a class="nav-link pl-5 active-biciletas" href="{% url 'listar_bicicletas' %}">Bicicletas</a>
-                        <a class="nav-link pl-5 active-estacionamientos" href="#">Estacionamientos</a>
+                        <a class="nav-link pl-5 active-estacionamientos" href="{% url 'listar_estacionamientos' %}">Estacionamientos</a>
                         <a class="nav-link pl-5 active-tarjetas" href="#">Tarjetas</a>
                         <!-- <a class="nav-link pl-5 disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
                     </nav>
