--- a/mobike/static/css/base.css
+++ b/mobike/static/css/base.css
@@ -3,6 +3,7 @@
 .navbar.bg-dark { z-index: 1; }
 
 body.bicicletas .cont-nav nav a.active-biciletas { background-color: lightgray; color: black; }
+body.estacionamientos .cont-nav nav a.active-estacionamientos { background-color: lightgray; color: black; }
 
 .cont-nav { width: 100%; height: calc(100vh - 56px); -webkit-box-shadow: 0px 6px 30px -15px black; box-shadow: 0px 6px 30px -15px black; background-color: #343a40; }
 .cont-nav nav a { color: white; }
