--- a/mobike/static/css/base.scss
+++ b/mobike/static/css/base.scss
@@ -59,3 +59,10 @@ body {
     overflow: scroll;
     height: calc(100vh - 56px);
 }
+
+.img-cont {
+    width: 100%;
+    img {
+        width: 100%;
+    }
+}
