--- a/mobike/templates/Usuario/base/base.html
+++ b/mobike/templates/Usuario/base/base.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
    
-   <title>{% block title %}Document {% endblock %}</title>
+   <title>{% block title %}{% endblock %} | Mobike</title>
 </head>
 <body>
 <div class="container">
