--- a/mobike/templates/Usuario/login.html
+++ b/mobike/templates/Usuario/login.html
@@ -1,9 +1,7 @@
 {% extends 'Usuario/base/base.html' %} 
 {% load static %}
 
-{% block title %}
-Registro
-{% endblock %}
+{% block title %}Iniciar Sesión{% endblock %}
 
 {% block head %}
 <link rel="stylesheet" href="{% static 'css/registro.css' %}" type="text/css">
@@ -14,34 +12,47 @@ Registro
 
 {% block content %}
 <div id="registro" class="container">
-    <h1 class="display">Login</h1><br>
-    <form method="POST" id="formulario">
-        {% csrf_token %}
-
-        <div class="form-group">
-            <label for="username">Nombre de Usuario</label><br>
-            <input name="username" class="form-control" type="text"/>
-            <div class="bg-danger mt-1">{{ form.errors.username }}</div>
-        </div>
-
-        <div class="form-group">
-            <label for="password">Password</label><br>
-            <input name="password" class="form-control" type="password"/>
-            <div class="bg-danger mt-1">{{ form.errors.password }}</div>
-        </div>
-
-        {% if form.non_field_errors %}
-        <div class="form-group">
-            <div class="bg-danger mt-1 p-2">Login incorrecto!</div>
-        </div>  
-        {% endif %}
+    <div class="row">
+        <div class="col-12">
+            <div class="jumbotron jumbotron-fluid mt-4">
+                <div class="container">
+                    <h1 class="display-4">Iniciar Sesión</h1>
+                    <p class="lead">Inicio de Sesión de Mobike</p>
+                </div>
+            </div>
+            <form method="POST" id="formulario">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="username">Nombre de Usuario</label><br>
+                    <input name="username" class="form-control" type="text"/>
+                    <div class="bg-danger mt-1">{{ form.errors.username }}</div>
+                </div>
         
-        {{form.non_field_errors}}
-
-        <div class="form-group">
-            <input class="btn" type="submit" value="Enviar"/>
-        </div>
+                <div class="form-group">
+                    <label for="password">Password</label><br>
+                    <input name="password" class="form-control" type="password"/>
+                    <div class="bg-danger mt-1">{{ form.errors.password }}</div>
+                </div>
         
-    </form>
+                {% if form.non_field_errors %}
+                <div class="form-group">
+                    <div class="bg-danger mt-1 p-2">Login incorrecto!</div>
+                </div>  
+                {% endif %}
+                
+                {{form.non_field_errors}}
+        
+                <div class="form-group">
+                    <input class="btn" type="submit" value="Enviar"/>
+                </div>
+                
+            </form>
+        </div>
+        <div class="col-12">
+            <p>usuario de preba:</p>
+            <p>user: admin</p>
+            <p>pass: 12345678</p>
+        </div>
+    </div>
 </div>
 {% endblock %}
