--- a/mobike/templates/base.html
+++ b/mobike/templates/base.html
@@ -2,19 +2,35 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>{% block titulo_principal %}{% endblock %} | AdminMobike </title>
-    <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/fontawesome-all.css' %}" rel="stylesheet">
-    <link href="{% static 'css/base.css' %}" rel="stylesheet">
+<head>  
+    {% if user.is_authenticated %}
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+        <title>{% block titulo_principal %}{% endblock %} | AdminMobike </title>
+        <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+        <link href="{% static 'css/fontawesome-all.css' %}" rel="stylesheet">
+        <link href="{% static 'css/base.css' %}" rel="stylesheet">
+    {% else %}
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+        <title>{% block title %}Home | Mobike{% endblock title %}</title>
+
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+        <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+        <link href="{% static 'css/fontawesome-all.css' %}" rel="stylesheet">
+        <link href="{% static 'css/swiper.css' %}" rel="stylesheet">
+        <link href="{% static 'css/magnific-popup.css' %}" rel="stylesheet">
+        
+        <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+    {% endif %}
 </head>
 
+{% if user.is_authenticated %}
 {% block clase_principal %}
 <body>
 {% endblock %}
@@ -26,7 +42,7 @@
             <div class="col-2 p-0">
                 <div class="cont-nav">
                     <nav class="nav flex-column bg-dark">
-                        <!--<a class="nav-link pl-5 active" href="#">Inicio</a>-->
+                        <a class="nav-link pl-5 active-home" href="{% url 'home' %}">Home</a>
                         <a class="nav-link pl-5 active-usuarios" href="#">Usuarios</a>
                         <a class="nav-link pl-5 active-biciletas" href="{% url 'listar_bicicletas' %}">Bicicletas</a>
                         <a class="nav-link pl-5 active-estacionamientos" href="{% url 'listar_estacionamientos' %}">Estacionamientos</a>
@@ -48,6 +64,194 @@
     <!-- jQuery for Bootstrap's JavaScript plugins -->
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <!-- Bootstrap framework -->
+{% else %}
+<body data-spy="scroll" data-target=".fixed-top">
+    <!-- Navigation -->
+    <nav id="home" class="navbar navbar-expand-lg fixed-top navbar-dark">
+        <div class="container">
+
+            <!-- Image Logo -->
+            <a class="navbar-brand logo-image" href="{% url 'home' %}"><img src="{% static 'img/one-page/logo.svg' %}" alt="alternative"></a> 
+
+            <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link page-scroll" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link page-scroll" href="#quienes-somos">¿Quiénes somos?</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link page-scroll" href="#como-ser-parte">Cómo ser parte</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link page-scroll" href="{% url 'login' %}">Iniciar sesión</a>
+                    </li>
+                </ul>
+                <span class="nav-item social-icons">
+                    <span class="fa-stack">
+                        <a href="#your-link">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-facebook-f fa-stack-1x"></i>
+                        </a>
+                    </span>
+                    <span class="fa-stack">
+                        <a href="#your-link">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-twitter fa-stack-1x"></i>
+                        </a>
+                    </span>
+                </span>
+            </div> <!-- end of navbar-collapse -->
+        </div> <!-- end of container -->
+    </nav> <!-- end of navbar -->
+    <!-- end of navigation -->
+    <!-- Header -->
+    <header id="header" class="header pb-0">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="text-container">
+                        <h1>MOBIKE PARA <br><span id="js-rotating">LA REINA, ÑUÑOA, PROVIDENCIA</span></h1>
+                        <p class="p-large">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias deleniti aperiam unde sunt obcaecati quod! Voluptatibus sapiente delectus aut animi mollitia nobis aspernatur quisquam, accusamus ullam. Tempora atque obcaecati illum!</p>
+                    </div> <!-- end of text-container -->
+                </div> <!-- end of col -->
+                <div class="col-lg-6">
+                    <img class="img-fluid" src="{% static 'img/one-page/header-smartphones.png' %}" alt="alternative">
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </header> <!-- end of header -->
+    <!-- end of header -->
+    <!-- Features -->
+    <div id="quienes-somos" class="basic-2 bg-dark-blue">
+        <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h2 class="h2-heading">¿QUIÉNES SOMOS?</h2>
+                    </div> <!-- end of col -->
+                </div> <!-- end of row -->
+                <div class="row">
+                    <div class="col-lg-6 col-md-12">
+                        <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni quasi facere iure animi aperiam, accusamus ipsum delectus saepe veniam voluptatibus dolorum rerum. Aspernatur ipsum possimus reprehenderit nesciunt distinctio, odio in?</div>
+                    </div> <!-- end of col -->
+                    <div class="col-lg-6 col-md-12">
+                        <div><img class="img-fluid" src="{% static 'img/one-page/bike_01.jpg' %}" alt=""></div>
+                    </div> <!-- end of col -->
+                </div> <!-- end of row --> 
+            </div> <!-- end of container --> 
+        <!-- end of features -->
+    </div>
+    <!-- Video -->
+    <div class="basic-1">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2 class="h2-heading">UNETE A LA EXPERIENCIA MOBIKE</h2>
+                    <div class="p-heading">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam reiciendis unde amet possimus reprehenderit, voluptatibus illo minima exercitationem esse suscipit ad hic ducimus magni vitae sed cupiditate dolores explicabo! Sunt?</div>
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+            <div class="row">
+                <div class="col-lg-12">
+
+                    <!-- Video Preview -->
+                    <div class="image-container">
+                        <div class="video-wrapper">
+                            <a class="popup-youtube" href="https://youtu.be/Oz72w0VZaAc" data-effect="fadeIn">
+                                <img class="img-fluid" src="{% static 'img/one-page/video-frame.jpg' %}" alt="alternative">
+                                <span class="video-play-button">
+                                    <span></span>
+                                </span>
+                            </a>
+                        </div> <!-- end of video-wrapper -->
+                    </div> <!-- end of image-container -->
+                    <!-- end of video preview -->
+
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of basic-1 -->
+    <!-- end of video -->
+    <!-- Features -->
+    <div id="como-ser-parte" class="basic-2 bg-dark-blue bg-2">
+        <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h2 class="h2-heading">COMO SER PARTE</h2>
+                    </div> <!-- end of col -->
+                </div> <!-- end of row -->
+                <div class="row">
+                    <div class="col-lg-6 col-md-12">
+                        <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni quasi facere iure animi aperiam, accusamus ipsum delectus saepe veniam voluptatibus dolorum rerum. Aspernatur ipsum possimus reprehenderit nesciunt distinctio, odio in?</div>
+                    </div> <!-- end of col -->
+                    <div class="col-lg-6 col-md-12">
+                        <div><img class="img-fluid" src="{% static 'img/one-page/bike_02.jpg' %}" alt=""></div>
+                    </div> <!-- end of col -->
+                </div> <!-- end of row --> 
+            </div> <!-- end of container --> 
+        <!-- end of features -->
+    </div>
+    <!-- Footer -->
+    <div class="footer bg-dark-blue">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="footer-col first">
+                        <h6>Mobike</h6>
+                        <p class="p-small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui expedita, consequuntur aliquam quidem deserunt aliquid non corporis ratione omnis, modi neque dicta provident, ea eos harum. Expedita, enim. Nihil, perspiciatis!</p>
+                    </div> <!-- end of footer-col -->
+                    <div class="footer-col second">
+                        
+                    </div> <!-- end of footer-col -->
+                    <div class="footer-col third">
+                        <span class="fa-stack">
+                            <a href="#your-link">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fab fa-facebook-f fa-stack-1x"></i>
+                            </a>
+                        </span>
+                        <span class="fa-stack">
+                            <a href="#your-link">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fab fa-twitter fa-stack-1x"></i>
+                            </a>
+                        </span>
+                        <p class="p-small">Contactanos <a href="#"><strong>contact@mobike.com</strong></a></p>
+                    </div> <!-- end of footer-col -->
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of footer -->  
+    <!-- end of footer -->
+    <!-- Copyright -->
+    <div class="copyright bg-dark-blue">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <p class="p-small">Copyright © <a href="#">Arquitectura</a></p>
+                </div> <!-- end of col -->
+            </div> <!-- enf of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of copyright --> 
+    <!-- end of copyright -->
+    
+    	
+    <!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="{% static 'js/jquery.easing.min.js' %}"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
+    <script src="{% static 'js/jquery.magnific-popup.js' %}"></script> <!-- Magnific Popup for lightboxes -->
+    <script src="{% static 'js/bootstrap.min.js' %}"></script> <!-- Bootstrap framework -->
+    
+    <script src="{% static 'js/morphext.min.js' %}"></script> <!-- Morphtext rotating text in the header -->
+    <script src="{% static 'js/scripts.js' %}"></script> <!-- Custom scripts -->
+    <script src="{% static 'js/swiper.min.js' %}"></script> <!-- Swiper for image and text sliders -->
+    <script src="{% static 'js/validator.min.js' %}"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
+
+{% endif %}
 </body>
 
 </html>
