--- a/mobike/templates/Usuario/base/base.html
+++ b/mobike/templates/Usuario/base/base.html
@@ -7,7 +7,8 @@
     {% block extrastatic %}
     {% endblock %}
 
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/base.css' %}" rel="stylesheet">
    
    <title>{% block title %}{% endblock %} | Mobike</title>
 </head>
