--- a/mobike/templates/Usuario/login.html
+++ b/mobike/templates/Usuario/login.html
@@ -40,14 +40,14 @@
                 {{form.non_field_errors}}
         
                 <div class="form-group nav justify-content-end">
-                    <input class="btn btn-secondary" type="submit" value="Enviar"/>
+                    <input class="btn btn-primary" type="submit" value="Enviar"/>
                 </div>
                 
             </form>
         </div>
         <div class="col-4">
             <ul class="nav navbar justify-content-center">
-                <li><a class="btn btn-primary" href="{% url 'registrar' %}">Registrarse</a></li>
+                <li><a class="btn btn-secondary" href="{% url 'registrar' %}">Registrarse</a></li>
             </ul>
             <!--
                 Super usuario
