--- a/mobike/templates/Usuario/login.html
+++ b/mobike/templates/Usuario/login.html
@@ -53,6 +53,13 @@
                 Super usuario
                 usuario: admin
                 pass: 12345678
+
+                
+                usuario: ejeutivo
+                pass: 111___111
+
+                usuario: usuario
+                pass: 111___111
             -->
         </div>
     </div>
